--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   # App state management & routing
   flutter_riverpod: ^2.4.9
   go_router: ^12.1.1
+  
+  # Local packages
+  features:
+    path: lib/features
 
 dev_dependencies:
   flutter_test:
