--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   # Local packages
   features:
     path: lib/features
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
