--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.0.0
   cloud_firestore: ^5.0.0
   firebase_storage: ^12.4.4
+  cloud_functions: ^5.0.0
 
   # App state management & routing
   flutter_riverpod: ^2.4.9
