--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "node16",
+    "moduleResolution": "node16",
     "outDir": "lib",
     "rootDir": "src",
     "sourceMap": true,
