--- a/lib/features/pubspec.yaml
+++ b/lib/features/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   firebase_auth: ^5.0.0
   firebase_core: ^3.13.0
   flutter_riverpod: ^2.4.9
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
