--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
     path: lib/features
   google_fonts: ^6.2.1
   intl: ^0.20.2
+  vibration: ^3.1.3
 
 dev_dependencies:
   flutter_test:
