--- a/lib/features/pubspec.yaml
+++ b/lib/features/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^3.13.0
   flutter_riverpod: ^2.4.9
   table_calendar: ^3.0.9
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
