--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   badges: ^3.1.2
   uuid: ^4.5.1
   collection: ^1.18.0
+
+  webview_flutter: ^4.8.0
   
   # Local packages
   features:
